kubernets/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shop-service
  namespace: bloomworld

spec:
  type: ClusterIP

  selector:
    app: shop-service

  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
