kubernets/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: bloomworld-gateway
  namespace: bloomworld

spec:
  gatewayClassName: gke-l7-regional-external-managed

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
