kubernets/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: shop-service-route
  namespace: bloomworld

spec:
  parentRefs:
    - name: bloomworld-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /shops

      backendRefs:
        - name: shop-service
          port: 80
